# Analysis_epic_new

./: .gitignore  README.md  ion
EICreconPlugins/: TProfile2DCAlibrationMatrix.root  analyzeSimFiles.py
EICreconPlugins/analyzeLumiHits/: CMakeLists.txt  analyzeLumiHits.cc  analyzeLumiHits.h  cal.cc  cal.h  constants.cc  constants.h  histogramManager.cc  histogramManager.h  tracker.cc  tracker.h  variables.cc  variables.h
EICreconPlugins/analyzeLumiHits/Old_Analayse_Lumi_Hits_Files/: analyzeLumiHits.cc  analyzeLumiHits.h  cal.cc  cal.h  constants.cc  tracker.cc  tracker.h
EventDisplay/: draw_geom.C  epic_display.C
Farm_Bash_Scripts/: #Combine_Result_PairSpec_Sim_v2.sh#  Combine_Result_PairSpec_Sim.sh  Combine_Result_PairSpec_Sim_v2.sh  Init_Env.sh  PairSpecPlots.C  PairSpec_Sim.sh  PairSpec_Sim_Job.sh  PairSpec_Sim_Job_Gun.sh  PairSpec_Sim_v2.sh  README.md
detectors/: LumispecVirtPlane_geo.cpp  specVirtPlane.xml
eventAnalysis/: LumiHitsAnalysis.cxx  PairSpecPlots.C  ProduceAcceptanceFiles.C  analyzeCalibSim.py  analyzeSimFiles.py  analyzeSimFilesWrapper.py
eventGen/: createEventFiles.py  createSimFiles.py  hepmc_particles.cxx  lumi_particles.cxx
exampleCode/: analyzeSimFiles.py  createEventFiles.py  createSimFiles.py
macros/: BH_plotter.C  CrystalBall_FitFunction.C  CrystalBall_MultiFit.C  PlotTrackerYres.C  PosResRequirement.C  ProduceAcceptanceFile.C  Sigma_compare.C  acceptance.C  hepmcToRoot.C
recoPlugins/: analyzeSimFiles.py  testPluginProcessor.cc  testPluginProcessor.h
scripts/: mysetup.sh
simulations/: CreateSimFiles__.py  MyWrapper.py  \  (+41 more)
(+20 files in other folders)
